# weaviatest

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  common.py  create_backup.py  create_class.py  create_tenants.py  delete_class.py  delete_data.py  delete_tenants.py  dev-requirements.txt  ingest_data.py  pyproject.toml  query_data.py  requirements.txt  restore_backup.py  setup.cfg  update_class.py  update_data.py  update_tenants.py  weaviatest.py
.github/workflows/: main.yaml
lib/: cancel_backup.py  common.py  create_backup.py  create_class.py  create_collection.py  create_data.py  create_tenants.py  delete_class.py  delete_collection.py  delete_data.py  delete_tenants.py  get_backup.py  get_collection.py  get_tenants.py  query_data.py  restore_backup.py  update_class.py  update_collection.py  update_data.py  update_tenants.py
weaviatest/: create_backup.py  create_collection.py  create_data.py  delete_tenants.py  get_tenants.py  query_data.py  update_data.py  update_tenants.py
