[metadata]
name = weaviatests
provides = weaviatests
description = Weaviate library for testing
url = https://github.com/weaviate/weaviatest
download_url = https://github.com/weaviate/weaviatest
author = weaviate
author_email =
keywords = python3, sql
license = GPL-3
platforms = Linux
version = 0.0.1
project_urls =
    Docs = https://github.com/weaviate/weaviatest/blob/main/README.md
    Bugs = https://github.com/weaviate/weaviatest/issues

license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
include_package_data = True
python_requires =
    >=3.12
install_requires =
    weaviate-client
    numpy
    semver
    click
setup_requires =
    pip
    setuptools
zip_safe = False
packages =
    weaviatest

[options.package_data]
# If any package or subpackage contains *.txt, *.rst or *.md files, include them:
*: ["*.txt", "*.rst", "*.md", LICENSE],